[project]
name = "taiwan-air-quality"
version = "0.1.0"
description = "Taiwan Air Quality Observation Data Processing and Analysis"
readme = "README.md"
authors = [
    { name = "whats2000" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]
keywords = ["air-quality", "taiwan", "data-processing", "environmental"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
data = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "plotly>=5.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/whats2000/TaiwanAirQualityObservationData"
Repository = "https://github.com/whats2000/TaiwanAirQualityObservationData"
Issues = "https://github.com/whats2000/TaiwanAirQualityObservationData/issues"

[project.scripts]
merge-data = "taiwan_air_quality.merge:main"
transform-data = "taiwan_air_quality.transform:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.2.3.250527",
    "types-tqdm>=4.67.0.20250516",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["taiwan_air_quality"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
